--- a/locales/ar.json
+++ b/locales/ar.json
@@ -2,5 +2,8 @@
     "start": "مرحبًا بك في بوت أنونيندو شات! اختر لغتك:",
     "main_menu": "القائمة الرئيسية:",
     "profile_complete": "تم إعداد الملف الشخصي.",
-    "profile_gender": "اختر جنسك:"
+    "profile_gender": "اختر جنسك:",
+    "searching_partner": "جارٍ البحث عن شريك...",
+    "no_partner_found": "لا يوجد شركاء متاحون الآن. حاول مرة أخرى لاحقًا.",
+    "invalid_filter_format": "تنسيق غير صحيح. اكتب: الجنس،المنطقة،الدولة"
 }
