--- a/locales/en.json
+++ b/locales/en.json
@@ -5,5 +5,6 @@
     "profile_gender": "Select your gender:",
     "searching_partner": "Looking for a partner...",
     "no_partner_found": "No partners available now. Try again later.",
-    "invalid_filter_format": "Invalid format. Type: gender,region,country"
+    "invalid_filter_format": "Invalid format. Type: gender,region,country",
+    "blocked": "You are blocked. Please contact support for help."
 }
