--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,9 +1,53 @@
 {
-    "start": "مرحبًا بك في بوت أنونيندو شات! اختر لغتك:",
-    "main_menu": "القائمة الرئيسية:",
-    "profile_complete": "تم إعداد الملف الشخصي.",
-    "profile_gender": "اختر جنسك:",
-    "searching_partner": "جارٍ البحث عن شريك...",
-    "no_partner_found": "لا يوجد شركاء متاحون الآن. حاول مرة أخرى لاحقًا.",
-    "invalid_filter_format": "تنسيق غير صحيح. اكتب: الجنس،المنطقة،الدولة"
+  "welcome": "مرحبًا! يرجى اختيار لغتك:",
+  "choose_language": "اختر لغتك:",
+  "lang_en": "الإنجليزية",
+  "lang_ar": "العربية",
+  "lang_hi": "الهندية",
+  "lang_id": "الإندونيسية",
+  "profile_setup": "إعداد الملف الشخصي.",
+  "ask_gender": "اختر جنسك:",
+  "gender_male": "ذكر",
+  "gender_female": "أنثى",
+  "gender_other": "آخر",
+  "gender_skip": "تخطي",
+  "ask_region": "اختر منطقتك:",
+  "ask_country": "اختر بلدك:",
+  "profile_saved": "تم حفظ الملف الشخصي! يمكنك الآن استخدام الدردشة.",
+  "profile": "ملفك الشخصي:",
+  "edit_profile": "تعديل",
+  "find": "جارٍ البحث عن شريك...",
+  "match_found": "🎉 تم العثور على شريك! قل مرحبًا.",
+  "pool_wait": "تمت إضافتك إلى قائمة البحث! انتظر حتى يتم العثور على شريك.",
+  "not_in_room": "أنت لست في غرفة. استخدم /find لبدء الدردشة.",
+  "end_chat": "لقد غادرت الدردشة.",
+  "partner_left": "غادر شريكك الدردشة.",
+  "blocked_word": "رسالتك تحتوي على كلمة محظورة. يرجى احترام الآخرين.",
+  "rate_limit": "يرجى الانتظار قبل إرسال رسالة أخرى.",
+  "chat_error": "خطأ في غرفة الدردشة. يرجى استخدام /find مرة أخرى.",
+  "upgrade_tip": "يرجى تحميل إثبات الدفع (صورة أو لقطة شاشة أو مستند)",
+  "proof_sent": "تم إرسال الإثبات إلى المسؤولين للمراجعة.",
+  "premium_only": "هذه الميزة للمستخدمين المميزين فقط.",
+  "premium_until": "أنت مستخدم مميز حتى {expiry}",
+  "premium_declined": "تم رفض طلبك.",
+  "admin_unauthorized": "غير مصرح.",
+  "user_blocked": "تم حظر المستخدم {user_id}.",
+  "user_unblocked": "تم رفع الحظر عن المستخدم {user_id}.",
+  "message_sent": "تم إرسال الرسالة.",
+  "message_failed": "فشل في إرسال الرسالة.",
+  "blocked_word_added": "تمت إضافة الكلمة المحظورة '{word}'.",
+  "blocked_word_removed": "تمت إزالة الكلمة المحظورة '{word}'.",
+  "user_not_found": "المستخدم غير موجود.",
+  "room_not_found": "الغرفة غير موجودة.",
+  "no_history_found": "لا يوجد سجل محادثة.",
+  "stats": "الإحصائيات:\nالمستخدمون: {users}\nالغرف: {rooms}\nالتقارير: {reports}",
+  "report_sent": "تم إرسال التقرير إلى المسؤول. شكرًا لمساعدتنا في الحفاظ على المنصة آمنة.",
+  "menu_back": "رجوع",
+  "start": "مرحبًا بك في بوت أنونيندو شات! اختر لغتك:",
+  "main_menu": "القائمة الرئيسية:",
+  "profile_complete": "تم إعداد الملف الشخصي.",
+  "profile_gender": "اختر جنسك:",
+  "searching_partner": "جارٍ البحث عن شريك...",
+  "no_partner_found": "لا يوجد شركاء متاحون الآن. حاول مرة أخرى لاحقًا.",
+  "invalid_filter_format": "تنسيق غير صحيح. اكتب: الجنس،المنطقة،الدولة"
 }
