--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,49 @@
     "searching_partner": "Looking for a partner...",
     "no_partner_found": "No partners available now. Try again later.",
     "invalid_filter_format": "Invalid format. Type: gender,region,country",
-    "blocked": "You are blocked. Please contact support for help."
+    "blocked": "You are blocked. Please contact support for help.",
+    "welcome": "Welcome! Please choose your language:",
+    "choose_language": "Select your language:",
+    "lang_en": "English",
+    "lang_ar": "Arabic",
+    "lang_hi": "Hindi",
+    "lang_id": "Indonesian",
+    "profile_setup": "Set up your profile.",
+    "ask_gender": "Select your gender:",
+    "gender_male": "Male",
+    "gender_female": "Female",
+    "gender_other": "Other",
+    "gender_skip": "Skip",
+    "ask_region": "Select your region:",
+    "ask_country": "Select your country:",
+    "profile_saved": "Profile saved! You can now use the chat.",
+    "profile": "Your Profile:",
+    "edit_profile": "Edit",
+    "find": "Searching for a partner...",
+    "match_found": "🎉 Match found! Say hi to your partner.",
+    "pool_wait": "You have been added to the finding pool! Wait for a match.",
+    "not_in_room": "Not in a room. Use /find to start a chat.",
+    "end_chat": "You have left the chat.",
+    "partner_left": "Your chat partner has left the chat.",
+    "blocked_word": "Your message contains a blocked word. Please be respectful.",
+    "rate_limit": "Rate limit: Please wait before sending another message.",
+    "chat_error": "Chat room error. Please use /find again.",
+    "upgrade_tip": "Please upload payment proof (photo, screenshot, or document)",
+    "proof_sent": "Proof sent to admins for review.",
+    "premium_only": "This feature is for premium users only.",
+    "premium_until": "You are premium until {expiry}",
+    "premium_declined": "Your request was declined.",
+    "admin_unauthorized": "Unauthorized.",
+    "user_blocked": "User {user_id} blocked.",
+    "user_unblocked": "User {user_id} unblocked.",
+    "message_sent": "Message sent.",
+    "message_failed": "Failed to send message.",
+    "blocked_word_added": "Blocked word '{word}' added.",
+    "blocked_word_removed": "Blocked word '{word}' removed.",
+    "user_not_found": "User not found.",
+    "room_not_found": "Room not found.",
+    "no_history_found": "No chat history found.",
+    "stats": "Stats:\nUsers: {users}\nRooms: {rooms}\nReports: {reports}",
+    "report_sent": "Report sent to admin. Thank you for helping keep our platform safe.",
+    "menu_back": "Back"
 }
