--- a/locales/hi.json
+++ b/locales/hi.json
@@ -1,89 +1,47 @@
 {
-    "welcome": "स्वागत है! कृपया अपनी भाषा चुनें:",
-    "choose_language": "अपनी भाषा चुनें:",
-    "lang_en": "अंग्रेज़ी",
-    "lang_ar": "अरबी",
-    "lang_hi": "हिंदी",
-    "lang_id": "इंडोनेशियाई",
-
-    "start": "AnonindoChat Bot में आपका स्वागत है! अपनी भाषा चुनें:",
-    "main_menu": "मुख्य मेनू:",
-    "profile_complete": "प्रोफ़ाइल सेटअप पूरा हुआ।",
-    "profile_gender": "लिंग चुनें:",
-    "searching_partner": "साथी की तलाश कर रहे हैं...",
-    "no_partner_found": "कोई साथी उपलब्ध नहीं है। बाद में पुनः प्रयास करें।",
-    "invalid_filter_format": "अमान्य प्रारूप। टाइप करें: लिंग,क्षेत्र,देश",
-    "blocked": "आप ब्लॉक हैं। कृपया सहायता के लिए संपर्क करें।",
-
-    "profile_setup": "प्रोफ़ाइल सेट करें।",
-    "ask_gender": "लिंग चुनें:",
-    "gender_male": "पुरुष",
-    "gender_female": "महिला",
-    "gender_other": "अन्य",
-    "gender_skip": "छोड़ें",
-    "ask_region": "अपना क्षेत्र चुनें:",
-    "ask_country": "अपना देश चुनें:",
-    "profile_saved": "प्रोफ़ाइल सेव हो गई! अब आप चैट का उपयोग कर सकते हैं।",
-    "profile": "आपकी प्रोफ़ाइल:",
-    "edit_profile": "संपादित करें",
-
-    "btn_profile": "प्रोफ़ाइल",
-    "btn_find": "सर्च करें",
-    "btn_upgrade": "अपग्रेड",
-    "btn_filters": "फ़िल्टर",
-    "btn_back": "वापस",
-    "btn_edit": "संपादित करें",
-    "btn_male": "पुरुष",
-    "btn_female": "महिला",
-    "btn_other": "अन्य",
-    "btn_skip": "स्किप",
-    "btn_filter_gender": "लिंग के अनुसार फ़िल्टर करें",
-    "btn_filter_region": "क्षेत्र के अनुसार फ़िल्टर करें",
-    "btn_filter_country": "देश के अनुसार फ़िल्टर करें",
-    "btn_filter_language": "भाषा के अनुसार फ़िल्टर करें",
-    "btn_filter_proceed": "खोज शुरू करें",
-    "btn_filter_mainmenu": "मुख्य मेनू",
-
-    "your_profile": "आपकी प्रोफ़ाइल:",
-    "username": "यूज़रनेम",
-    "gender": "लिंग",
-    "region": "क्षेत्र",
-    "country": "देश",
-    "premium": "प्रीमियम",
-    "choose_gender": "अपना लिंग चुनें:",
-    "choose_region": "लिंग सेव किया गया। अब क्षेत्र चुनें:",
-    "choose_country": "क्षेत्र सेव किया गया। अब देश चुनें:",
-    "profile_saved": "प्रोफ़ाइल सेव हो गई! अब आप चैट कर सकते हैं।",
-    "new_user": "🆕 नया उपयोगकर्ता",
-    "phone": "फ़ोन",
-    "language": "भाषा",
-
-    "find": "साथी की तलाश कर रहे हैं...",
-    "match_found": "🎉 साथी मिल गया! अभिवादन करें।",
-    "pool_wait": "आपको खोज पूल में जोड़ दिया गया है! मैच का इंतजार करें।",
-    "not_in_room": "आप किसी कमरे में नहीं हैं। चैट शुरू करने के लिए /find का उपयोग करें।",
-    "end_chat": "आपने चैट छोड़ दी है।",
-    "partner_left": "आपका साथी चैट छोड़ चुका है।",
-
-    "blocked_word": "आपके संदेश में अवरोधित शब्द है। कृपया सम्मानजनक रहें।",
-    "rate_limit": "कृपया एक और संदेश भेजने से पहले प्रतीक्षा करें।",
-    "chat_error": "चैट रूम में त्रुटि। कृपया फिर से /find करें।",
-    "upgrade_tip": "कृपया भुगतान का प्रमाण (फोटो, स्क्रीनशॉट या दस्तावेज़) अपलोड करें",
-    "proof_sent": "प्रमाण समीक्षा के लिए एडमिन्स को भेजा गया।",
-    "premium_only": "यह सुविधा केवल प्रीमियम उपयोगकर्ताओं के लिए है।",
-    "premium_until": "आप {expiry} तक प्रीमियम उपयोगकर्ता हैं",
-    "premium_declined": "आपका अनुरोध अस्वीकार कर दिया गया है।",
-
-    "admin_unauthorized": "अनधिकृत।",
-    "user_blocked": "उपयोगकर्ता {user_id} अवरुद्ध किया गया।",
-    "user_unblocked": "उपयोगकर्ता {user_id} का अवरोध हटाया गया।",
-    "message_sent": "संदेश भेजा गया।",
-    "message_failed": "संदेश भेजने में विफल।",
-    "blocked_word_added": "अवरुद्ध शब्द '{word}' जोड़ा गया।",
-    "blocked_word_removed": "अवरुद्ध शब्द '{word}' हटाया गया।",
-    "user_not_found": "उपयोगकर्ता नहीं मिला।",
-    "room_not_found": "कमरा नहीं मिला।",
-    "no_history_found": "कोई चैट इतिहास नहीं मिला।",
-    "stats": "आंकड़े:\nउपयोगकर्ता: {users}\nकक्षाएँ: {rooms}\nरिपोर्ट: {reports}",
-    "report_sent": "रिपोर्ट एडमिन को भेजी गई। सुरक्षित प्लेटफार्म बनाए रखने में मदद के लिए धन्यवाद।"
+  "welcome": "स्वागत है! कृपया अपनी भाषा चुनें:",
+  "choose_language": "अपनी भाषा चुनें:",
+  "lang_en": "अंग्रेज़ी",
+  "lang_ar": "अरबी",
+  "lang_hi": "हिंदी",
+  "lang_id": "इंडोनेशियाई",
+  "profile_setup": "प्रोफ़ाइल सेट करें।",
+  "ask_gender": "लिंग चुनें:",
+  "gender_male": "पुरुष",
+  "gender_female": "महिला",
+  "gender_other": "अन्य",
+  "gender_skip": "छोड़ें",
+  "ask_region": "अपना क्षेत्र चुनें:",
+  "ask_country": "अपना देश चुनें:",
+  "profile_saved": "प्रोफ़ाइल सेव हो गई! अब आप चैट का उपयोग कर सकते हैं।",
+  "profile": "आपकी प्रोफ़ाइल:",
+  "edit_profile": "प्रोफ़ाइल संपादित करें",
+  "find": "खोजें",
+  "end_chat": "चैट समाप्त करें",
+  "match_found": "🎉 साथी मिल गया! अभिवादन करें।",
+  "pool_wait": "आपको खोज पूल में जोड़ दिया गया है! मैच का इंतजार करें।",
+  "not_in_room": "आप किसी कमरे में नहीं हैं। चैट शुरू करने के लिए /find का उपयोग करें।",
+  "partner_left": "आपका साथी चैट छोड़ चुका है।",
+  "blocked_word": "आपके संदेश में अवरोधित शब्द है। कृपया सम्मानजनक रहें।",
+  "rate_limit": "कृपया एक और संदेश भेजने से पहले प्रतीक्षा करें।",
+  "chat_error": "चैट रूम में त्रुटि। कृपया फिर से /find करें।",
+  "upgrade_tip": "अपग्रेड",
+  "proof_sent": "प्रमाण समीक्षा के लिए एडमिन्स को भेजा गया।",
+  "premium_only": "यह सुविधा केवल प्रीमियम उपयोगकर्ताओं के लिए है।",
+  "premium_until": "आप {expiry} तक प्रीमियम उपयोगकर्ता हैं",
+  "premium_declined": "आपका अनुरोध अस्वीकार कर दिया गया है।",
+  "admin_unauthorized": "अनधिकृत।",
+  "user_blocked": "उपयोगकर्ता {user_id} अवरुद्ध किया गया।",
+  "user_unblocked": "उपयोगकर्ता {user_id} का अवरोध हटाया गया।",
+  "message_sent": "संदेश भेजा गया।",
+  "message_failed": "संदेश भेजने में विफल।",
+  "blocked_word_added": "अवरुद्ध शब्द '{word}' जोड़ा गया।",
+  "blocked_word_removed": "अवरुद्ध शब्द '{word}' हटाया गया।",
+  "user_not_found": "उपयोगकर्ता नहीं मिला।",
+  "room_not_found": "कमरा नहीं मिला।",
+  "no_history_found": "कोई चैट इतिहास नहीं मिला।",
+  "stats": "आंकड़े:\nउपयोगकर्ता: {users}\nकक्षाएँ: {rooms}\nरिपोर्ट: {reports}",
+  "report_sent": "रिपोर्ट एडमिन को भेजी गई। सुरक्षित प्लेटफार्म बनाए रखने में मदद के लिए धन्यवाद।",
+  "menu_back": "वापस",
+  "main_menu": "मुख्य मेनू:"
 }
