--- a/locales/id.json
+++ b/locales/id.json
@@ -1,89 +1,47 @@
 {
-    "welcome": "Selamat datang! Silakan pilih bahasa Anda:",
-    "choose_language": "Pilih bahasa Anda:",
-    "lang_en": "Inggris",
-    "lang_ar": "Arab",
-    "lang_hi": "Hindi",
-    "lang_id": "Indonesia",
-
-    "start": "Selamat datang di AnonindoChat Bot! Pilih bahasa Anda:",
-    "main_menu": "Menu utama:",
-    "profile_complete": "Pengaturan profil selesai.",
-    "profile_gender": "Pilih jenis kelamin Anda:",
-    "searching_partner": "Mencari partner...",
-    "no_partner_found": "Tidak ada partner yang tersedia saat ini. Silakan coba lagi nanti.",
-    "invalid_filter_format": "Format tidak valid. Tulis: jenis kelamin,region,negara",
-    "blocked": "Anda diblokir. Hubungi dukungan untuk bantuan.",
-
-    "profile_setup": "Atur profil Anda.",
-    "ask_gender": "Pilih jenis kelamin Anda:",
-    "gender_male": "Laki-laki",
-    "gender_female": "Perempuan",
-    "gender_other": "Lainnya",
-    "gender_skip": "Lewati",
-    "ask_region": "Pilih wilayah Anda:",
-    "ask_country": "Pilih negara Anda:",
-    "profile_saved": "Profil disimpan! Anda dapat mulai menggunakan chat.",
-    "profile": "Profil Anda:",
-    "edit_profile": "Edit",
-
-    "btn_profile": "Profil",
-    "btn_find": "Cari",
-    "btn_upgrade": "Upgrade",
-    "btn_filters": "Filter",
-    "btn_back": "Kembali",
-    "btn_edit": "Edit",
-    "btn_male": "Laki-laki",
-    "btn_female": "Perempuan",
-    "btn_other": "Lainnya",
-    "btn_skip": "Lewati",
-    "btn_filter_gender": "Filter berdasarkan Gender",
-    "btn_filter_region": "Filter berdasarkan Wilayah",
-    "btn_filter_country": "Filter berdasarkan Negara",
-    "btn_filter_language": "Filter berdasarkan Bahasa",
-    "btn_filter_proceed": "Mulai Pencarian",
-    "btn_filter_mainmenu": "Menu Utama",
-
-    "your_profile": "Profil Anda:",
-    "username": "Username",
-    "gender": "Gender",
-    "region": "Wilayah",
-    "country": "Negara",
-    "premium": "Premium",
-    "choose_gender": "Pilih gender Anda:",
-    "choose_region": "Gender disimpan. Pilih wilayah Anda:",
-    "choose_country": "Wilayah disimpan. Pilih negara Anda:",
-    "profile_saved": "Profil disimpan! Anda dapat mulai chat.",
-    "new_user": "🆕 Pengguna Baru",
-    "phone": "Telepon",
-    "language": "Bahasa",
-
-    "find": "Mencari partner...",
-    "match_found": "🎉 Partner ditemukan! Sapa partner Anda.",
-    "pool_wait": "Anda telah ditambahkan ke pool pencarian! Tunggu hingga mendapatkan partner.",
-    "not_in_room": "Anda tidak berada di ruang obrolan. Gunakan /find untuk mulai chatting.",
-    "end_chat": "Anda telah keluar dari chat.",
-    "partner_left": "Partner Anda telah meninggalkan chat.",
-
-    "blocked_word": "Pesan Anda berisi kata terblokir. Mohon bersikap sopan.",
-    "rate_limit": "Mohon tunggu sebelum mengirim pesan lagi.",
-    "chat_error": "Terjadi kesalahan pada ruang chat. Silakan gunakan /find lagi.",
-    "upgrade_tip": "Silakan unggah bukti pembayaran (foto, screenshot, atau dokumen)",
-    "proof_sent": "Bukti telah dikirim ke admin untuk ditinjau.",
-    "premium_only": "Fitur ini hanya untuk pengguna premium.",
-    "premium_until": "Anda premium hingga {expiry}",
-    "premium_declined": "Permintaan Anda ditolak.",
-
-    "admin_unauthorized": "Tidak diizinkan.",
-    "user_blocked": "Pengguna {user_id} diblokir.",
-    "user_unblocked": "Blokir pada pengguna {user_id} telah dihapus.",
-    "message_sent": "Pesan berhasil dikirim.",
-    "message_failed": "Gagal mengirim pesan.",
-    "blocked_word_added": "Kata terblokir '{word}' telah ditambahkan.",
-    "blocked_word_removed": "Kata terblokir '{word}' telah dihapus.",
-    "user_not_found": "Pengguna tidak ditemukan.",
-    "room_not_found": "Ruang tidak ditemukan.",
-    "no_history_found": "Riwayat chat tidak ditemukan.",
-    "stats": "Statistik:\nPengguna: {users}\nRuang: {rooms}\nLaporan: {reports}",
-    "report_sent": "Laporan telah dikirim ke admin. Terima kasih telah membantu menjaga platform tetap aman."
+  "welcome": "Selamat datang! Silakan pilih bahasa Anda:",
+  "choose_language": "Pilih bahasa Anda:",
+  "lang_en": "Inggris",
+  "lang_ar": "Arab",
+  "lang_hi": "Hindi",
+  "lang_id": "Indonesia",
+  "profile_setup": "Atur profil Anda.",
+  "ask_gender": "Pilih jenis kelamin Anda:",
+  "gender_male": "Laki-laki",
+  "gender_female": "Perempuan",
+  "gender_other": "Lainnya",
+  "gender_skip": "Lewati",
+  "ask_region": "Pilih wilayah Anda:",
+  "ask_country": "Pilih negara Anda:",
+  "profile_saved": "Profil disimpan! Anda dapat mulai menggunakan chat.",
+  "profile": "Profil Anda:",
+  "edit_profile": "Edit Profil",
+  "find": "Cari",
+  "end_chat": "Akhiri Chat",
+  "match_found": "🎉 Partner ditemukan! Sapa partner Anda.",
+  "pool_wait": "Anda telah ditambahkan ke pool pencarian! Tunggu hingga mendapatkan partner.",
+  "not_in_room": "Anda tidak berada di ruang obrolan. Gunakan /find untuk mulai chatting.",
+  "partner_left": "Partner Anda telah meninggalkan chat.",
+  "blocked_word": "Pesan Anda berisi kata terblokir. Mohon bersikap sopan.",
+  "rate_limit": "Mohon tunggu sebelum mengirim pesan lagi.",
+  "chat_error": "Terjadi kesalahan pada ruang chat. Silakan gunakan /find lagi.",
+  "upgrade_tip": "Upgrade",
+  "proof_sent": "Bukti telah dikirim ke admin untuk ditinjau.",
+  "premium_only": "Fitur ini hanya untuk pengguna premium.",
+  "premium_until": "Anda premium hingga {expiry}",
+  "premium_declined": "Permintaan Anda ditolak.",
+  "admin_unauthorized": "Tidak diizinkan.",
+  "user_blocked": "Pengguna {user_id} diblokir.",
+  "user_unblocked": "Blokir pada pengguna {user_id} telah dihapus.",
+  "message_sent": "Pesan berhasil dikirim.",
+  "message_failed": "Gagal mengirim pesan.",
+  "blocked_word_added": "Kata terblokir '{word}' telah ditambahkan.",
+  "blocked_word_removed": "Kata terblokir '{word}' telah dihapus.",
+  "user_not_found": "Pengguna tidak ditemukan.",
+  "room_not_found": "Ruang tidak ditemukan.",
+  "no_history_found": "Riwayat chat tidak ditemukan.",
+  "stats": "Statistik:\nPengguna: {users}\nRuang: {rooms}\nLaporan: {reports}",
+  "report_sent": "Laporan telah dikirim ke admin. Terima kasih telah membantu menjaga platform tetap aman.",
+  "menu_back": "Kembali",
+  "main_menu": "Menu utama:"
 }
